--- a/assets/grid.css
+++ b/assets/grid.css
@@ -19,7 +19,7 @@
 
 /* Chia theo hệ 12 column */
 .c-12 {
-    flex: 100%;
+    flex: 0 0 100%;
     max-width: 100%;
 }
 
@@ -42,9 +42,25 @@
 
 .col-10 {
     width: calc(100% - 8.33%);
-
 }
 
+.col-3 {
+    max-width: 33.3333%;
+    flex: 0 0 100%;
+}
+
+@media (min-width: 1024px){
+    .col-12 {
+        display: block;
+    }
+}
+
+@media (min-width: 1024px) {
+    .row {
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+}
 
 
 
